# aula13-14_bootcamp

./: README.md  pyproject.toml
data/csv_files/: test copy 2.csv  test copy 3.csv  test copy 4.csv  test copy 5.csv  test copy.csv  test.csv
data/txt_files/: test copy.txt  test.txt
src/: __main__.py
src/lib/classes/: AbstractDataSource.py  CsvSource.py  FilesSources.py  JsonSource.py  TxtSource.py
